window controls for win32

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nanoid": "^5.1.5",
     "pinia": "^3.0.3",
     "shiki": "^3.6.0",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
