--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/lodash-es": "^4",
     "@vitejs/plugin-vue": "^5.2.1",
     "clsx": "^2.1.1",
+    "sass-embedded": "^1.89.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.6.2",
