--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
+    "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.5.1",
     "zod": "^3.25.51"
   },
