--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "motion-v": "^1.1.1",
     "nanoid": "^5.1.5",
     "pinia": "^3.0.3",
+    "prosemirror-example-setup": "^1.2.3",
+    "prosemirror-model": "^1.25.1",
+    "prosemirror-schema-basic": "^1.2.4",
+    "prosemirror-schema-list": "^1.5.1",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-view": "^1.40.0",
     "reka-ui": "^2.3.1",
     "shiki": "^3.6.0",
     "tailwind-variants": "^1.0.0",
