--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nanoid": "^5.1.5",
     "pinia": "^3.0.3",
     "reka-ui": "^2.3.1",
+    "rich-editor": "workspace:*",
     "shiki": "^3.6.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.8",
