--- a/packages/rich-editor/package.json
+++ b/packages/rich-editor/package.json
@@ -12,5 +12,8 @@
     "prosemirror-schema-list": "^1.5.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.40.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.2"
   }
 }
