--- a/packages/rich-editor/package.json
+++ b/packages/rich-editor/package.json
@@ -6,11 +6,17 @@
   },
   "dependencies": {
     "lit": "^3.3.0",
-    "prosemirror-example-setup": "^1.2.3",
+    "prosemirror-commands": "^1.7.1",
+    "prosemirror-dropcursor": "^1.8.2",
+    "prosemirror-gapcursor": "^1.3.2",
+    "prosemirror-highlight": "^0.13.0",
+    "prosemirror-history": "^1.4.1",
+    "prosemirror-inputrules": "^1.5.0",
+    "prosemirror-keymap": "^1.2.3",
     "prosemirror-model": "^1.25.1",
-    "prosemirror-schema-basic": "^1.2.4",
     "prosemirror-schema-list": "^1.5.1",
     "prosemirror-state": "^1.4.3",
+    "prosemirror-transform": "^1.10.4",
     "prosemirror-view": "^1.40.0"
   },
   "devDependencies": {
