--- a/packages/rich-editor/package.json
+++ b/packages/rich-editor/package.json
@@ -17,6 +17,7 @@
     "prosemirror-schema-list": "^1.5.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-transform": "^1.10.4",
+    "prosemirror-utils": "^1.2.2",
     "prosemirror-view": "^1.40.0"
   },
   "devDependencies": {
