--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@ai-sdk/deepseek": "^0.2.14",
     "@ai-sdk/vue": "^1.2.12",
+    "@milkdown/crepe": "^7.15.2",
+    "@milkdown/kit": "^7.15.2",
+    "@milkdown/vue": "^7.15.2",
     "@nuxt/ui": "^3.1.3",
     "@openrouter/ai-sdk-provider": "^0.7.0",
     "@tauri-apps/api": "^2",
@@ -29,7 +32,6 @@
     "nanoid": "^5.1.5",
     "pinia": "^3.0.3",
     "reka-ui": "^2.3.1",
-    "rich-editor": "workspace:*",
     "shiki": "^3.6.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.8",
@@ -50,9 +52,5 @@
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
     "vue-tsc": "^2.1.10"
-  },
-  "packageManager": "yarn@4.9.1+sha512.f95ce356460e05be48d66401c1ae64ef84d163dd689964962c6888a9810865e39097a5e9de748876c2e0bf89b232d583c33982773e9903ae7a76257270986538",
-  "workspaces": [
-    "packages/*"
-  ]
+  }
 }
