--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^0.2.14",
+    "@ai-sdk/openai-compatible": "^1.0.0",
     "@ai-sdk/vue": "^1.2.12",
     "@milkdown/crepe": "^7.15.2",
     "@milkdown/kit": "^7.15.2",
