--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@milkdown/crepe": "^7.15.2",
     "@milkdown/kit": "^7.15.2",
     "@milkdown/vue": "^7.15.2",
+    "@monaco-editor/loader": "^1.7.0",
     "@nuxt/ui": "^4.3.0",
     "@openrouter/ai-sdk-provider": "^0.7.0",
     "@tauri-apps/api": "^2",
@@ -29,6 +30,7 @@
     "marked-highlight": "^2.2.1",
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
+    "monaco-editor": "^0.55.1",
     "motion-v": "^1.1.1",
     "nanoid": "^5.1.5",
     "pinia": "^3.0.3",
