--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@ai-sdk/deepseek": "^0.2.14",
     "@ai-sdk/openai-compatible": "^1.0.0",
     "@ai-sdk/vue": "^1.2.12",
+    "@iconify-json/heroicons": "^1.2.3",
+    "@iconify-json/lucide": "^1.2.82",
+    "@iconify-json/vscode-icons": "^1.2.37",
     "@milkdown/crepe": "^7.15.2",
     "@milkdown/kit": "^7.15.2",
     "@milkdown/vue": "^7.15.2",
