--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@openrouter/ai-sdk-provider": "^0.7.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2",
     "@vueuse/core": "^13.3.0",
     "ai": "^4.3.16",
