--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "@ai-sdk/deepseek": "^0.2.14",
     "@ai-sdk/openai-compatible": "^0.2.14",
     "@ai-sdk/vue": "^1.2.12",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/state": "^6.5.3",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.39.8",
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/vscode-icons": "^1.2.37",
@@ -27,7 +33,9 @@
     "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2",
     "@vueuse/core": "^13.3.0",
+    "@vueuse/integrations": "^14.1.0",
     "ai": "^4.3.16",
+    "codemirror": "^6.0.2",
     "dedent": "^1.6.0",
     "lodash-es": "^4.17.21",
     "marked": "^15.0.12",
