--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2",
     "@vueuse/core": "^13.3.0",
+    "@xterm/addon-fit": "^0.11.0",
+    "@xterm/xterm": "^6.0.0",
     "ai": "^4.3.16",
     "codemirror": "^6.0.2",
     "dedent": "^1.6.0",
