--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,7 @@ tauri-plugin-fs = "2"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 futures = "0.3"
+portable-pty = "0.8"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 objc2 = "0.6.1"
