--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 futures = "0.3"
 portable-pty = "0.8"
+nanoid = "0.4"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 objc2 = "0.6.1"
