--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/vscode-icons": "^1.2.37",
-    "@milkdown/crepe": "^7.15.2",
-    "@milkdown/kit": "^7.15.2",
-    "@milkdown/vue": "^7.15.2",
+    "@milkdown/crepe": "^7.18.0",
+    "@milkdown/kit": "^7.18.0",
+    "@milkdown/vue": "^7.18.0",
     "@monaco-editor/loader": "^1.7.0",
     "@nuxt/ui": "^4.3.0",
     "@openrouter/ai-sdk-provider": "^0.7.0",
@@ -68,5 +68,6 @@
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
     "vue-tsc": "^2.1.10"
-  }
+  },
+  "packageManager": "yarn@4.12.0"
 }
