--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,7 @@ futures = "0.3"
 portable-pty = "0.8"
 nanoid = "0.4"
 notify = "8.0"
+tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 
 [target."cfg(target_os = \"macos\")".dependencies]
 objc2 = "0.6.1"
