--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ portable-pty = "0.8"
 nanoid = "0.4"
 notify = "8.0"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
+tauri-plugin-shell = "2"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 objc2 = "0.6.1"
