--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@tauri-apps/plugin-dialog": "^2.5.0",
     "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-opener": "^2.5.3",
-    "@tauri-apps/plugin-shell": "~2",
+    "@tauri-apps/plugin-shell": "^2.3.4",
     "@tauri-apps/plugin-sql": "~2",
     "@vueuse/core": "^13.3.0",
     "@xterm/addon-fit": "^0.11.0",
