--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/vscode-icons": "^1.2.37",
-    "@milkdown/crepe": "^7.18.0",
-    "@milkdown/kit": "^7.18.0",
-    "@milkdown/vue": "^7.18.0",
     "@monaco-editor/loader": "^1.7.0",
     "@nuxt/ui": "^4.3.0",
     "@openrouter/ai-sdk-provider": "^0.7.0",
@@ -34,6 +31,12 @@
     "@tauri-apps/plugin-opener": "^2.5.3",
     "@tauri-apps/plugin-shell": "^2.3.4",
     "@tauri-apps/plugin-sql": "~2",
+    "@tiptap/core": "^3.15.3",
+    "@tiptap/extension-emoji": "^3.15.3",
+    "@tiptap/extension-text-align": "^3.15.3",
+    "@tiptap/pm": "^3.15.3",
+    "@tiptap/suggestion": "^3.15.3",
+    "@tiptap/vue-3": "^3.15.3",
     "@vueuse/core": "^13.3.0",
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/xterm": "^6.0.0",
@@ -50,9 +53,11 @@
     "nanoid": "^5.1.5",
     "pinia": "^3.0.3",
     "reka-ui": "^2.3.1",
+    "scule": "^1.3.0",
     "shiki": "^3.6.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.8",
+    "tiptap-extension-code-block-shiki": "^1.0.0",
     "vue": "^3.5.13",
     "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.5.1",
