--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@codemirror/state": "^6.5.3",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.39.8",
+    "@dagrejs/dagre": "^1.1.8",
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/vscode-icons": "^1.2.37",
@@ -37,6 +38,12 @@
     "@tiptap/pm": "^3.15.3",
     "@tiptap/suggestion": "^3.15.3",
     "@tiptap/vue-3": "^3.15.3",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.3",
+    "@vue-flow/core": "^1.48.1",
+    "@vue-flow/minimap": "^1.5.4",
+    "@vue-flow/node-resizer": "^1.5.0",
+    "@vue-flow/node-toolbar": "^1.1.1",
     "@vueuse/core": "^13.3.0",
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/xterm": "^6.0.0",
