--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/vscode-icons": "^1.2.37",
-    "@monaco-editor/loader": "^1.7.0",
     "@nuxt/ui": "^4.3.0",
     "@openrouter/ai-sdk-provider": "^0.7.0",
     "@tauri-apps/api": "^2.9.1",
@@ -33,11 +32,16 @@
     "@tauri-apps/plugin-shell": "^2.3.4",
     "@tauri-apps/plugin-sql": "~2",
     "@tiptap/core": "^3.15.3",
+    "@tiptap/extension-collaboration": "^3.15.3",
+    "@tiptap/extension-drag-handle": "^3.15.3",
     "@tiptap/extension-emoji": "^3.15.3",
+    "@tiptap/extension-node-range": "^3.15.3",
     "@tiptap/extension-text-align": "^3.15.3",
+    "@tiptap/extensions": "^3.15.3",
     "@tiptap/pm": "^3.15.3",
     "@tiptap/suggestion": "^3.15.3",
     "@tiptap/vue-3": "^3.15.3",
+    "@tiptap/y-tiptap": "^3.0.1",
     "@vue-flow/background": "^1.3.2",
     "@vue-flow/controls": "^1.1.3",
     "@vue-flow/core": "^1.48.1",
@@ -55,7 +59,6 @@
     "marked-highlight": "^2.2.1",
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
-    "monaco-editor": "^0.55.1",
     "motion-v": "^1.1.1",
     "nanoid": "^5.1.5",
     "pinia": "^3.0.3",
@@ -68,6 +71,7 @@
     "vue": "^3.5.13",
     "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.5.1",
+    "yjs": "^13.6.29",
     "zod": "^3.25.67"
   },
   "devDependencies": {
