--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,9 +29,11 @@ tokio-util = { version = "0.7", features = ["codec"] }
 futures = "0.3"
 portable-pty = "0.8"
 nanoid = "0.4"
-notify = "8.0"
-tauri-plugin-sql = { version = "2", features = ["sqlite"] }
-tauri-plugin-shell = "2"
+ notify = "8.0"
+ tauri-plugin-sql = { version = "2", features = ["sqlite"] }
+ tauri-plugin-shell = "2"
+ glob = "0.3"
+ ignore = "0.4"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 objc2 = "0.6.1"
