--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/extension-collaboration": "^3.15.3",
     "@tiptap/extension-drag-handle": "^3.15.3",
     "@tiptap/extension-emoji": "^3.15.3",
+    "@tiptap/extension-mention": "^3.15.3",
     "@tiptap/extension-node-range": "^3.15.3",
     "@tiptap/extension-text-align": "^3.15.3",
     "@tiptap/extensions": "^3.15.3",
@@ -67,6 +68,7 @@
     "shiki": "^3.6.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.8",
+    "tippy.js": "^6.3.7",
     "tiptap-extension-code-block-shiki": "^1.0.0",
     "vue": "^3.5.13",
     "vue-easy-lightbox": "^1.19.0",
@@ -78,6 +80,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@tauri-apps/cli": "^2",
     "@types/lodash-es": "^4",
+    "@types/tippy.js": "^6.3.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "clsx": "^2.1.1",
     "sass-embedded": "^1.89.2",
