--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.39.8",
     "@dagrejs/dagre": "^1.1.8",
+    "@floating-ui/vue": "^1.1.9",
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/vscode-icons": "^1.2.37",
