--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@dagrejs/dagre": "^1.1.8",
     "@floating-ui/vue": "^1.1.9",
     "@iconify-json/heroicons": "^1.2.3",
-    "@iconify-json/lucide": "^1.2.82",
+    "@iconify-json/lucide": "^1.2.86",
     "@iconify-json/vscode-icons": "^1.2.37",
     "@nuxt/ui": "^4.3.0",
     "@openrouter/ai-sdk-provider": "^0.7.0",
@@ -72,6 +72,7 @@
     "tailwindcss": "^4.1.8",
     "tippy.js": "^6.3.7",
     "tiptap-extension-code-block-shiki": "^1.0.0",
+    "unplugin-icons": "^23.0.1",
     "vue": "^3.5.13",
     "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.5.1",
