--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lodash-es": "^4.17.21",
     "marked": "^15.0.12",
     "marked-highlight": "^2.2.1",
+    "mime": "^4.1.0",
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
     "motion-v": "^1.1.1",
