--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 tauri-plugin-shell = "2"
 glob = "0.3"
 ignore = "0.4"
+reqwest = { version = "0.12", features = ["json"] }
 
 [target."cfg(target_os = \"macos\")".dependencies]
 objc2 = "0.6.1"
