--- a/package.json
+++ b/package.json
@@ -44,10 +44,14 @@
     "@tauri-apps/plugin-sql": "~2",
     "@tiptap/core": "^3.15.3",
     "@tiptap/extension-collaboration": "^3.15.3",
+    "@tiptap/extension-document": "^3.17.0",
     "@tiptap/extension-drag-handle": "^3.15.3",
     "@tiptap/extension-emoji": "^3.15.3",
+    "@tiptap/extension-hard-break": "^3.17.0",
     "@tiptap/extension-mention": "^3.15.3",
     "@tiptap/extension-node-range": "^3.15.3",
+    "@tiptap/extension-paragraph": "^3.17.0",
+    "@tiptap/extension-text": "^3.17.0",
     "@tiptap/extension-text-align": "^3.15.3",
     "@tiptap/extensions": "^3.15.3",
     "@tiptap/pm": "^3.15.3",
@@ -86,6 +90,7 @@
     "vue": "^3.5.13",
     "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.5.1",
+    "y-protocols": "^1.0.7",
     "yjs": "^13.6.29",
     "zod": "^3.25.67"
   },
