--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@codemirror/lang-rust": "^6.0.2",
     "@codemirror/lang-sass": "^6.0.2",
     "@codemirror/lang-sql": "^6.10.0",
-    "@codemirror/state": "^6.5.3",
+    "@codemirror/merge": "^6.11.2",
+    "@codemirror/state": "^6.5.4",
     "@codemirror/theme-one-dark": "^6.1.3",
-    "@codemirror/view": "^6.39.8",
+    "@codemirror/view": "^6.39.11",
     "@dagrejs/dagre": "^1.1.8",
     "@floating-ui/vue": "^1.1.9",
     "@iconify-json/heroicons": "^1.2.3",
