--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,7 @@ tauri-plugin-shell = "2"
 glob = "0.3"
 ignore = "0.4"
 reqwest = { version = "0.12", features = ["json"] }
+git2 = "0.19"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 objc2 = "0.6.1"
