--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,7 @@ glob = "0.3"
 ignore = "0.4"
 reqwest = { version = "0.12", features = ["json"] }
 git2 = "0.19"
+chrono = "0.4"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 objc2 = "0.6.1"
