feat: mcp integration

--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
     "vue-router": "^4.5.1",
     "y-protocols": "^1.0.7",
     "yjs": "^13.6.29",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zod-from-json-schema": "^0.1.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.8",
