--- a/src-tauri/assets/.gitattributes
+++ b/src-tauri/assets/.gitattributes
@@ -1,2 +1,4 @@
 binaries/bun-x86_64-pc-windows-msvc.exe filter=lfs diff=lfs merge=lfs -text
 binaries/bun-aarch64-apple-darwin filter=lfs diff=lfs merge=lfs -text
+binaries/bun-aarch64-unknown-linux-gnu filter=lfs diff=lfs merge=lfs -text
+binaries/bun-x86_64-unknown-linux-gnu filter=lfs diff=lfs merge=lfs -text
