--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,14 +39,15 @@ git2 = "0.19"
 chrono = "0.4"
 
 # MCP server support
-rmcp = { version = "0.5", features = [
+rmcp = { version = "0.14", features = [
     "client",
+    "server",
     "client-side-sse",
+    "reqwest",
     "transport-io",
     "transport-child-process",
     "transport-streamable-http-client",
-    "transport-sse-client",
-    "reqwest",
+    "transport-streamable-http-client-reqwest",
     "macros",
     "schemars"
 ] }
