--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "@iconify-json/vscode-icons": "^1.2.37",
     "@nuxt/ui": "^4.3.0",
     "@openrouter/ai-sdk-provider": "^2.2.3",
+    "@supabase/supabase-js": "^2.97.0",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.5.0",
     "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-opener": "^2.5.3",
     "@tauri-apps/plugin-shell": "^2.3.4",
     "@tauri-apps/plugin-sql": "~2",
+    "@tauri-apps/plugin-store": "^2.4.2",
     "@tiptap/core": "^3.15.3",
     "@tiptap/extension-collaboration": "^3.15.3",
     "@tiptap/extension-document": "^3.17.0",
