--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@floating-ui/vue": "^1.1.9",
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/lucide": "^1.2.86",
+    "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.37",
     "@nuxt/ui": "^4.3.0",
     "@openrouter/ai-sdk-provider": "^2.2.3",
